# rocq-lsp-client

./: .gitignore  README.md  dune-project  rocq-lsp-client.opam
.github/workflows/: build.yml
lib/: client.ml  client.mli  command.ml  command.mli  common.ml  common.mli  dune  location.ml  location.mli  log_type.ml
sample/: dune  main.ml
sample/resources/: Foo.glob  Foo.v  Foo.vo  Makefile.conf  _CoqProject
test/: dune
